--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "homepage": "https://github.com/Hakerh400/esolangs",
   "repository": "git://github.com/Hakerh400/esolangs.git",
   "scripts": {
-    "test": "mocha --timeout 0 --slow 18446744073709551616 test/*.test.js"
+    "test": "node test"
   },
   "dependencies": {
-    "omikron": "^1.2.0"
+    "omikron": "^1.2.2"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "@hakerh400/jstest": "^1.1.1"
   },
   "engines": {
     "node": ">=12"
