--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "homepage": "https://github.com/Hakerh400/esolangs",
   "repository": "git://github.com/Hakerh400/esolangs.git",
   "scripts": {
-    "test": "node test"
+    "test": "node --max-old-space-size=5000 test"
   },
   "dependencies": {
     "omikron": "^1.2.9"
