--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hakerh400/esolangs",
   "description": "Collection of interpreters for esoteric programming languages",
-  "version": "1.0.10",
+  "version": "1.1.0",
   "author": "Thomas <hakerh403@gmail.com>",
   "main": "index.js",
   "contributors": [],
@@ -16,10 +16,11 @@
     "test": "node --max-old-space-size=5000 test"
   },
   "dependencies": {
-    "omikron": "^1.2.12"
+    "omikron": "~1.2.12",
+    "@hakerh400/table": "~1.0.0"
   },
   "devDependencies": {
-    "@hakerh400/jstest": "^1.1.1"
+    "@hakerh400/jstest": "~1.1.2"
   },
   "engines": {
     "node": ">=13"
