--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "test": "node --max-old-space-size=5000 test"
   },
   "dependencies": {
+    "omikron": "~1.2.39",
     "@hakerh400/list": "~1.0.4",
     "@hakerh400/table": "~1.0.0",
-    "@hakerh400/fs-rec": "~1.0.2",
-    "omikron": "~1.2.38"
+    "@hakerh400/fs-rec": "~1.0.2"
   },
   "devDependencies": {
     "@hakerh400/jstest": "~1.1.2"
