--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hakerh400/esolangs",
   "description": "Collection of interpreters for esoteric programming languages",
-  "version": "1.2.29",
+  "version": "1.2.30",
   "author": "Thomas <hakerh403@gmail.com>",
   "main": "index.js",
   "contributors": [],
@@ -13,10 +13,10 @@
   "homepage": "https://github.com/Hakerh400/esolangs",
   "repository": "git://github.com/Hakerh400/esolangs.git",
   "scripts": {
-    "test": "node --max-old-space-size=5000 test"
+    "test": "node --max-old-space-size=5000 --trace-deprecation test"
   },
   "dependencies": {
-    "omikron": "~1.2.44",
+    "omikron": "~1.2.45",
     "@hakerh400/config": "~1.0.1",
     "@hakerh400/list": "~1.0.4",
     "@hakerh400/fs-rec": "~1.0.3",
